--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
           <h2>HAPPY</h2>
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-          <h4>FROM DISPICABLE ME...</h4>
+          <h4>FROM DISPICABLE ME 2</h4>
         </div>
       </div>
 
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3>FROM DISPICABLE ME 2</h3>
 
         <!-- Level 1 'HAPPY' Header -->
 
